# pico_lib_template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SETUP.md  compile.sh  cz.json  flash.sh  rebuild.sh  settings.cmake
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  pins.h
src/mylib/: adder.cpp  adder.h
